If there are 2 notices in the Media Library, prevent styling overlap
When there were 2 notices, like for the wrong
video type and file size,
the notices overlapped some of the media.
So add a class to the media library
if there are 2 notices.
And add a style rule for that class.

--- a/assets/css/amp-stories-editor.css
+++ b/assets/css/amp-stories-editor.css
@@ -223,3 +223,8 @@ div[data-amp-caption="noCaption"] .wp-block-video figcaption {
 	height: 100%;
 	width: 100%;
 }
+
+/* If the Media Library has 2 notices, like for wrong video file type and size, prevent them from covering the media. */
+.media-frame.has-two-notices .media-frame-content {
+	bottom: 120px;
+}
